--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Chart Web</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="assets/img/ujaen.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="assets/img/ujaen.gif" sizes="16x16">
   <link rel="stylesheet" href="assets/css/aurora-pack.min.css">
   <link rel="stylesheet" href="assets/css/aurora-theme-base.min.css">
   <link rel="stylesheet" href="assets/css/urku.css">
